# tacacs-ng-ui

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.vi.md  SECURITY.md  copier.yml  docker-compose.override.yml  docker-compose.yml  release-notes.md  setup-ha.sh  user-guide.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  supervisord.conf  tacacs-cron-jobs  tacacs-ng.conf
backend/app/: main.py  models.py
backend/app/alembic/versions/: 097cd7afefc7_add_tacacs_models.py  40caa721e6a2_add_datetime.py  481620d2d694_add_statistics_tables.py  4b38d11f24e1_add_google_id_to_user.py  4ff49388474a_add_generate_config_to_models.py  89abf27ed80c_add_ha_state_table.py  9ebbf2329bba_add_node_name_to_aaa_statistics.py  a1551ca6df13_add_configuration_option_table.py  a1b2c3d4e5f6_add_alert_anomaly_tables.py  a1b2c3d4e5f7_add_ha_multi_node_tables.py  a3f9c2e01d45_add_auditlog_table.py  aa01b2c3d4e5_add_unique_constraints_statistics.py  ab12cd34ef56_seed_passkey_enabled_default.py  b0af430ec0d3_add_timezone_to_tacacsngsetting.py  b1c2d3e4f5a6_add_old_new_values_to_auditlog.py  b2c3d4e5f6a7_add_is_system_to_alertrule.py  b7040293d0a2_add_tacacs_models.py  c3e7f8a91b02_add_keycloak_id_webauthn_and_authproviderconfig.py  c4d5e6f7a8b9_add_auditlog_composite_index.py  (+4 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: aaa_statistics.py  alert_evaluator.py  alert_events.py  alert_rules.py  anomaly_detection.py  audit_logs.py  auth_providers.py  configuration_options.py  hosts.py  mavis.py  mavises.py  ml_anomaly_scorer.py  notification_channels.py  notification_dispatcher.py  passkeys.py  profiles.py  profilescripts.py  profilescriptsets.py  rulesets.py  rulesetscripts.py  rulesetscriptsets.py  tacacs_configs.py  tacacs_groups.py  tacacs_ng_settings.py  tacacs_services.py  tacacs_siem.py  tacacs_users.py  users.py
backend/scripts/: _log_stats_base.py  config_sync_watcher.py  cron_runner.sh  entrypoint.sh  prestart.sh  setup-standby.sh  tacacs_logs_accounting.py  tacacs_logs_authentication.py  tacacs_logs_authorization.py  test.sh
backend/tacacs_config/etc/: .gitkeep  tac_plus-ng.cfg
backend/tacacs_config_and_logs/etc/: tac_plus-ng.cfg
backend/tests/: conftest.py
backend/tests/crud/: test_tacacs_configs.py  test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py  user.py  utils.py
(+234 files in other folders)
